<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global -->
    <string name="app_name">Garcon</string>

    <!-- Dashboard buttons -->
    <string name="btn_post_dish">Add dish</string>
    <string name="btn_nearby_restaurants">Nearby restaurants</string>
    <string name="btn_nearby_dishes">Nearby dishes</string>
    <string name="btn_search_nearby_dish">Search dish</string>
    <string name="btn_search_restaurant">Search restaurant</string>
    <string name="btn_feedback">Give feedback</string>

    <!-- FindRestaurantByName -->
    <string name="find_rest_name_title">Find restaurant by name</string>
    <string name="btn_find_rest_name_more">Set custom location</string>

    <!-- NearbyRestaurants -->
    <string name="nearby_restaurants_title">No location</string>
    <string name="nearby_restaurants_base">Restaurants near</string>
    <string name="nearby_restaurants_no_locality">Restaurants near me</string>

    <!-- Address Dialog -->
    <string name="dialog_country_hint">Country</string>
    <string name="dialog_city_hint">City</string>
    <string name="dialog_address_hint">Address</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_address_title">Enter location</string>
    <string name="dialog_addresslist_title">Results for location</string>

    <!-- Dashboard menu -->
    <string name="menu_post_dish">Add dish</string>
    <string name="menu_nearby">Show nearby…</string>
    <string name="menu_search">Search…</string>
    <string name="menu_restaurants">… restaurants</string>
    <string name="menu_restaurant">… restaurant</string>
    <string name="menu_dishes">… dishes</string>
    <string name="menu_dish">… dish</string>
    <string name="menu_search_restaurant_hint">Restaurant</string>
    <string name="menu_search_dish_hint">Dish</string>

    <!-- NearbyRestaurants menu -->
    <string name="menu_change_location">Change location</string>
    <string name="menu_gps">via GPS</string>
    <string name="menu_network">via network (vague)</string>
    <string name="menu_address">via address</string>

</resources>